[project]
name = "vllm-proxy"
version = "0.1.0"
description = "Thin vLLM wrapper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.mypy]
python_version = "3.13"
files = ["main.py"]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    # "D",   # pydocstyle
    "D401",
]
ignore = [
    "E741", # ambiguous-variable-name
    "D100", # missing module docstring
    "D101", # missing class docstring
    "D102", # missing method docstring
    "D104", # missing package docstring
    "D107", # missing __init__ docstring
]

[tool.ruff.lint.pydocstyle]
convention = "google"
